flaskapp/static/style.css
/* Global Styles. */
body {
  margin: 0;
  padding: 0;
  background: white;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  font-weight: 400;
  color: #666699;
}

/* Styling for the navigation bar. */
.navbar {
  padding: 0 20px;
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #333;
  color: white;
}

/* Styling for the navigation bar Title. */
.Title {
  font-size: 24px;
  margin: 15px;
  text-transform: uppercase;
}

/* Styling for the navigation bar Links. */
.navlinks ul {
  margin: 0;
  padding: 0;
  display: flex
}

.navlinks li {
  list-style: none;
}

.navlinks li a {
  color: white;
  font-size: 12px;
  text-transform: uppercase;
  text-decoration: none;
  display: block;
  padding: 1rem;
}

/* Styling for the navigation bar Links when hovering. */
.navlinks li:hover {
  background-color: #555;
}

/* dynamic adjustments for navbar */
@media (max-width: 600px) {
.navbar {
  flex-direction: column;
  align-items: flex-start;
}
.navlinks ul li a {
  padding: 5px 8px;
}
}

option {
  font-size: 200%;
}

/* Styling for the map container */
#map {
  height: 700px;
  width: 95%;
  padding-bottom: 30px;
  margin: 25px;
}

/* page container styling */
.page-container {
  position: relative;
  min-height: 100vh;
}

/* page content styling */
.content {
  margin: 25px 25px 0 25px;
  padding-bottom: 5rem;
}

/* page footer styling */
#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 10px 20px;
  height: 3rem;
  background-color: #333;
  color: white;
  text-align: center;
}
#footer p {
  margin-top: 8px;
  padding: 5px;
  float: left;
}

/* contact form styling */
input[type=text], textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}
input[type=submit] {
  background-color: #4CAF50;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}
input[type=submit]:hover {
  background-color: #45a049;
}
.contact-form {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
}

